# rust-rasp-os

./: .gitignore  README.md
nook_os/: .docker_qemu_cmd.swp  Cargo.toml  Makefile
nook_os/docs/: chap03_README.md  chap04_README.md  chap05_README.md  chap06_README.md  rust_lifetime.md
nook_os/docs/armv8/: atomic_operation.md
nook_os/src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  memory.rs  panic_wait.rs  print.rs  runtime_init.rs  synchronization.rs
nook_os/src/_arch/aarch64/: cpu.S  cpu.rs
nook_os/src/_arch/aarch64/cpu/: smp.rs
nook_os/src/bsp/: device_driver.rs  raspberrypi.rs
nook_os/src/bsp/device_driver/: bcm.rs  common.rs
nook_os/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
nook_os/src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  link.ld  memory.rs
nook_os/src/cpu/: smp.rs
