[package]
name = "kernel"
version = "0.1.0"
authors = ["Sunwook Eom <sunwook5492@gmail.com>"]
edition = "2018"

# The features section is used to select the target board.
[features]
default = []
bsp_rpi3 = ["cortex-a"]
bsp_rpi4 = ["cortex-a"]

[dependencies]

# Optional dependencies
cortex-a = { version = "3.0.x", optional = true }
